[package]
name = "diary-server"
version = "0.1.0"
authors = ["sh4869 <nobuk4869@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.3"
actix-web = "3"
actix-files = "0.5.0"
serde = "1"
serde_json = "1"
futures = "0.3"
maud = "0.22.1"
ansi-to-html = "0.1.0"